--- a/composer.json
+++ b/composer.json
@@ -3,20 +3,21 @@
 	"description": "A simple Laravel analytics package",
 	"type": "library",
 	"require": {
-	  "php": "^8.0",
-	  "jenssegers/agent": "^2.6"
+		"php": "^8.0",
+		"jenssegers/agent": "^2.6",
+		"squizlabs/php_codesniffer": "^3.11"
 	},
 	"autoload": {
-	  "psr-4": {
-		"McComasChris\\MarcoAnalytics\\": "src/"
-	  }
+		"psr-4": {
+			"McComasChris\\MarcoAnalytics\\": "src/"
+		}
 	},
 	"extra": {
-	  "laravel": {
-		"providers": [
-		  "McComasChris\\MarcoAnalytics\\MarcoAnalyticsServiceProvider"
-		]
-	  }
+		"laravel": {
+			"providers": [
+				"McComasChris\\MarcoAnalytics\\MarcoAnalyticsServiceProvider"
+			]
+		}
 	},
 	"require-dev": {
 		"tightenco/duster": "^3.1"
